// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-accordion default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion disabled 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion empty $slots.default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion header 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        Value specified in header slot for this example and all others to follow
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion id 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="id123-body-wrap"
    class="m-accordion__header m--has-padding"
    id="id123"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion open 1`] = `
<article
  class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    aria-expanded="true"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <!---->
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour cacher le contenu
      </span>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
      title="Cliquer pour cacher le contenu"
    />
  </div>
   
  <div
    aria-labelledby="uuid"
    class="m-accordion__body-wrap"
    id="uuid-body-wrap"
    role="tabpanel"
  >
    <div
      class="m-accordion__body m--has-padding"
    >
       Some Accordion Content
    </div>
  </div>
</article>
`;

exports[`Storyshots components|m-accordion/icon-position="right" default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/icon-position="right" icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/icon-position="right" icon-size="small && icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--has-border"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/icon-position="right" icon-size="small" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/icon-size="small" default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/icon-size="small" icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--has-border m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/keepContentAlive default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/keepContentAlive keep-content-alive="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <div
    aria-labelledby="uuid"
    class="m-accordion__body-wrap"
    id="uuid-body-wrap"
    role="tabpanel"
    style="display: none;"
  >
    <div
      class="m-accordion__body m--has-padding"
    >
       Some Accordion Content
    </div>
  </div>
</article>
`;

exports[`Storyshots components|m-accordion/padding default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/padding padding-body="false" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/padding padding-header="false" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/skin dark 1`] = `
<article
  class="m-accordion m--is-dark m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/skin dark-b 1`] = `
<article
  class="m-accordion m--is-dark-b m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-light m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/skin default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/skin light 1`] = `
<article
  class="m-accordion m--is-light m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots components|m-accordion/skin plain 1`] = `
<article
  class="m-accordion m--is-plain m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="uuid-body-wrap"
    class="m-accordion__header m--has-padding"
    id="uuid"
    role="tab"
    tabindex="0"
  >
    <div
      class="m-accordion__header__content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
       
      <span
        class="m-i18n m-accordion__hidden"
      >
        Cliquer pour afficher le contenu
      </span>
       
      <!---->
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
      title="Cliquer pour afficher le contenu"
    />
  </div>
   
  <!---->
</article>
`;
